# MARS

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/rag/: knowledge_base.py  schema.sql  setup_db.sh
deploy/: export_model.py
deploy/jetson/: actor_phase15.pt  actor_phase2_student.pt  actor_phase2_teacher.pt  actor_phase3_marl.pt  benchmark_llm.py  inference.py  ros2_bridge.py
deploy/runpod/: RUNPOD_GUIDE.md  setup.sh
docs/: MARL_MPG_DECISION.md  PHASE1_PROGRESS.md  PHASE3_IPPO_VS_MAPPO.md  PHASE3_PROGRESS.md  PROJECT_DESIGN.md  SESSION_PROGRESS.md  TRAINING_TIME_ESTIMATION.md  phase2_transport_debug.md
envs/warehouse/: __init__.py  ippo_wrapper.py  warehouse_env.py  warehouse_manipulation_env.py  warehouse_marl_env.py  warehouse_obstacle_env.py
logs/: eval_17dim_final_model_9999.json  eval_17dim_safedist18_model_11998.json  eval_ippo_model_400.json  eval_mappo_ctde_model_4999.json  eval_mappo_model_5399.json
logs/warehouse_ippo/: model_400.pt
logs/warehouse_mappo/: model_4999.pt  model_5399.pt  model_9998.pt  model_9999.pt
logs/warehouse_nav/: model_999.pt
logs/warehouse_obstacle_nav/: model_100.pt
memory/: MEMORY.md  feedback_rsl_rl_runpod.md
training/multi_robot/: demo_play.py  eval_scenarios.py  potential_reward.py  train_ippo.py  train_marl.py
training/single_robot/: debug_transport.py  eval_manipulation.py  finetune_navigation.py  quick_test_navigation.py  test_navigation_headless.py  test_obstacle_headless.py  train_manipulation.py  train_navigation.py  train_navigation_obstacle.py  view_navigation.py  view_obstacle_navigation.py
(+1 files in other folders)
